# file_signature_generator

./: .clang-format  CMakeLists.txt  Readme.md
src/app/: SignatureCalculator.cpp  SignatureCalculator.h  main.cpp
src/interfaces/: IDataProvider.h  IDataProviderFactory.h  IHashCalculator.h  IHashSaver.h  Interface.cmake
src/lib/CRCHashCalculator/: CRCHashCalculator.cmake  CRCHashCalculator.cpp  CRCHashCalculator.h
src/lib/CRCHashCalculator/unit_tests/: crc_test.cpp
src/lib/FileDataProvider/: FileDataProvider.cmake  FileDataProvider.cpp  FileDataProvider.h  FileDataProviderFactory.cpp  FileDataProviderFactory.h  IFStreamDataProvider.cpp  IFStreamDataProvider.h  MMapDataProvider.cpp  MMapDataProvider.h
src/lib/FileHashSaver/: FileHashSaver.cmake  FileHashSaver.cpp  FileHashSaver.h
src/lib/MD5HashCalculator/: MD5HashCalculator.cmake  MD5HashCalculator.cpp  MD5HashCalculator.h
src/lib/MD5HashCalculator/unit_tests/: md5_test.cpp
